<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_title_margin_end"
            app:expandedTitleMarginStart="@dimen/collapsing_toolbar_title_margin_start"
            app:expandedTitleTextAppearance="@style/CollapsedAppBarTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageView_collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/marvel_logo"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/comic_detail_cell_height"
                android:layout_marginTop="@dimen/detail_list_cell_margin_top">

                <ImageView
                    android:id="@+id/imageview_icon_title"
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_title"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_title"
                    android:layout_toRightOf="@+id/imageview_icon_title"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/detail_title_text_size" />

                <TextView
                    android:id="@+id/tv_title_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_title"
                    android:layout_alignStart="@+id/tv_title"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginTop="4dp"
                    tool:text="@string/placeholder_name"
                    android:textSize="@dimen/comic_detail_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/description_cell_height"
                android:layout_marginTop="@dimen/detail_list_cell_margin_top">

                <ImageView
                    android:id="@+id/imageview_icon_description"
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_description_black" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_description"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_description"
                    android:layout_toRightOf="@+id/imageview_icon_description"
                    android:text="@string/string_description"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/detail_title_text_size" />

                <TextView
                    android:id="@+id/tv_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_description"
                    android:layout_alignStart="@+id/tv_description"
                    android:layout_below="@+id/tv_description"
                    android:layout_marginTop="4dp"
                    tool:text="@string/placeholder_name"
                    android:lines="4"
                    android:maxLines="4"
                    android:textSize="@dimen/comic_detail_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/comic_detail_cell_height"
                android:layout_marginTop="@dimen/detail_list_cell_margin_top">

                <ImageView
                    android:id="@+id/imageview_icon_pageCount"
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_assessment_black" />

                <TextView
                    android:id="@+id/tv_pageCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_pageCount"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_pageCount"
                    android:layout_toRightOf="@+id/imageview_icon_pageCount"
                    android:text="@string/string_pageCount"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/detail_title_text_size" />

                <TextView
                    android:id="@+id/tv_pageCount_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_pageCount"
                    android:layout_alignStart="@+id/tv_pageCount"
                    android:layout_below="@+id/tv_pageCount"
                    android:layout_marginTop="4dp"
                    tool:text="@string/placeholder_name"
                    android:textSize="@dimen/comic_detail_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/comic_detail_cell_height"
                android:layout_marginTop="@dimen/detail_list_cell_margin_top">

                <ImageView
                    android:id="@+id/imageview_icon_price"
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_currency" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_price"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_price"
                    android:layout_toRightOf="@+id/imageview_icon_price"
                    android:text="@string/string_price"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/detail_title_text_size" />

                <TextView
                    android:id="@+id/tv_price_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_price"
                    android:layout_alignStart="@+id/tv_price"
                    android:layout_below="@+id/tv_price"
                    android:layout_marginTop="4dp"
                    tool:text="@string/placeholder_name"
                    android:textSize="@dimen/comic_detail_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/comic_detail_cell_height"
                android:layout_marginTop="@dimen/detail_list_cell_margin_top">

                <ImageView
                    android:id="@+id/imageview_icon_author"
                    android:layout_width="@dimen/comic_detail_image_view_dimen"
                    android:layout_height="@dimen/comic_detail_image_view_dimen"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_population" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageview_icon_author"
                    android:layout_marginLeft="@dimen/margin_left_detail_title_text_view"
                    android:layout_marginStart="@dimen/margin_left_detail_title_text_view"
                    android:layout_toEndOf="@+id/imageview_icon_author"
                    android:layout_toRightOf="@+id/imageview_icon_author"
                    android:text="@string/string_author"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/detail_title_text_size" />

                <TextView
                    android:id="@+id/tv_author_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_author"
                    android:layout_alignStart="@+id/tv_author"
                    android:layout_below="@+id/tv_author"
                    android:layout_marginTop="4dp"
                    tool:text="@string/placeholder_name"
                    android:textSize="@dimen/comic_detail_text_size" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>